--- a/public/Dockerfile
+++ b/public/Dockerfile
@@ -1,13 +1,23 @@
-FROM node:16-alpine
+# Используем базовый образ Node.js
+FROM node:14
 
+# Устанавливаем рабочую директорию
 WORKDIR /app
 
-COPY package.json /app/
+# Копируем package.json и package-lock.json (если есть)
+COPY package.json  ./
 
+# Устанавливаем зависимости (например, http-server)
 RUN npm install
 
-COPY . /app
+# Копируем все остальные файлы проекта
+COPY . .
 
-EXPOSE 3000
+# Устанавливаем простой HTTP сервер
+RUN npm install -g http-server
 
-CMD ["npm", "start"]
+# Экспонируем порт
+EXPOSE 5000
+
+# Команда для запуска HTTP сервера
+CMD ["http-server", "-p", "5000"]
